--- a/.ddev/providers/git.yaml.example
+++ b/.ddev/providers/git.yaml.example
@@ -4,7 +4,7 @@
 # To use this configuration,
 
 # 1. Create a git repository that contains a database dump (db.sql.gz) and a files tarball. It can be private or public, but for most people they will be private.
-# 2. Configure access to the repository so that it can be accessed from where you need it. For example, on gitpod, you'll need to enable access to GitHub or Gitlab. On a regular local dev environment, you'll need to be able to access github via https or ssh.
+# 2. Configure access to the repository so that it can be accessed from where you need it. For example, on a regular local dev environment, you'll need to be able to access github via https or ssh.
 # 3. Update the environment_variables below to point to the git repository that contains your database dump and files.
 
 environment_variables:
