--- a/.ddev/providers/pantheon.yaml
+++ b/.ddev/providers/pantheon.yaml
@@ -27,9 +27,9 @@
 #    ```
 #    You can also do this with `ddev config --web-environment-add="PANTHEON_SITE=yourproject,PANTHEON_ENVIRONMENT=dev"`.
 #
-#    You can usually use the site name, but in some environments you may need the site uuid, 
-#    which is the long 3rd component of your site dashboard URL. So if the site dashboard is at 
-#    <https://dashboard.pantheon.io/sites/009a2cda-2c22-4eee-8f9d-96f017321555#dev/>, 
+#    You can usually use the site name, but in some environments you may need the site uuid,
+#    which is the long 3rd component of your site dashboard URL. So if the site dashboard is at
+#    <https://dashboard.pantheon.io/sites/009a2cda-2c22-4eee-8f9d-96f017321555#dev/>,
 #    the site ID is 009a2cda-2c22-4eee-8f9d-96f017321555.
 #
 # 3. For `ddev push pantheon` make sure your public ssh key is configured in Pantheon (Account->SSH Keys)
@@ -87,7 +87,7 @@ files_pull_command:
 
 # push is very useful for non-production environments, but can be
 # very dangerous to production environments. If it is dangerous to your
-# workflow you can remove the lines below and remove the `#ddev-generated` in this file
+# workflow you can remove the lines below and remove the `ddev-generated` in this file
 db_push_command:
   command: |
     # set -x   # You can enable bash debugging output by uncommenting
@@ -105,7 +105,7 @@ db_push_command:
 
 # push is very useful for non-production environments, but can be
 # very dangerous to production environments. If it is dangerous to your
-# workflow you can remove the lines below and remove the `#ddev-generated` in this file
+# workflow you can remove the lines below and remove the `ddev-generated` in this file
 files_push_command:
   command: |
     # set -x   # You can enable bash debugging output by uncommenting
