--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,12 +46,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.1', '8.2', '8.3']
+        php: ['8.1', '8.2', '8.3', '8.4']
         typo3: ['12.4', '13.0']
         db: ['sqlite', 'mariadb', 'postgres']
         exclude:
           - php: '8.1'
             typo3: '13.0'
+          - php: '8.4'
+            typo3: '12.4'
 
     services:
       mariadb:
@@ -145,3 +147,21 @@ jobs:
         with:
           file: .Build/logs/clover.xml
           fail_ci_if_error: true
+
+  dependency-check:
+    name: Dependency Security Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+          extensions: mbstring, intl
+
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress
+
+      - name: Check for known security vulnerabilities
+        run: composer audit
