--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,14 @@
         "typo3/cms-reports": "^12.4 || ^13.0"
     },
     "require-dev": {
-        "typo3/testing-framework": "^8.0",
-        "phpunit/phpunit": "^10.5",
-        "phpstan/phpstan": "^2.0",
-        "phpstan/extension-installer": "^1.3",
-        "saschaegerer/phpstan-typo3": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.40",
-        "phpunit/phpcov": "^9.0"
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan": "^2.0",
+        "phpunit/phpcov": "^9.0",
+        "phpunit/phpunit": "^10.5",
+        "saschaegerer/phpstan-typo3": "^2.0",
+        "typo3/coding-standards": "^0.8",
+        "typo3/testing-framework": "^8.0"
     },
     "autoload": {
         "psr-4": {
@@ -86,6 +87,9 @@
         "ci": [
             "@code:check",
             "@test"
-        ]
+        ],
+        "docs:render": "docker run --rm --pull always -v \"$(pwd):/project\" ghcr.io/typo3-documentation/render-guides:latest --config=Documentation/guides.xml",
+        "docs:serve": "php -S localhost:8090 -t Documentation-GENERATED-temp/",
+        "docs:clean": "rm -rf Documentation-GENERATED-temp/"
     }
 }
