--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
     url: https://typo3.org/community/meet/chat-slack
     about: Join the TYPO3 Slack for general questions and community support
   - name: Documentation
-    url: https://github.com/netresearch/t3x-nr-temporal-cache/tree/main/Documentation
+    url: https://docs.typo3.org/p/netresearch/nr-temporal-cache/main/en-us/
     about: Check the documentation for setup guides and reference
