--- a/.ddev/docker-compose.web.yaml
+++ b/.ddev/docker-compose.web.yaml
@@ -2,7 +2,7 @@ version: '3.6'
 services:
   web:
     volumes:
-      - "./:/var/www/html/typo3conf/ext/temporal_cache:cached"
+      - "../:/var/www/html/typo3conf/ext/nr_temporal_cache:cached"
       - "v12:/var/www/html/v12:cached"
       - "v13:/var/www/html/v13:cached"
     environment:
