Fix TYPO3 v13 backend module API compatibility
Resolves ArgumentCountError and undefined method errors when running
backend module under TYPO3 v13 LTS.

Changes:
- Add PageRenderer as constructor dependency for v13 compatibility
- Inject PageRenderer via DI instead of accessing via ModuleTemplate
- Remove deprecated makeHelpButton() call (not available in v13)
- Fix getLanguageService() type assertion for PHPStan

Files modified:
- Classes/Controller/Backend/TemporalCacheController.php
- Configuration/Services.yaml

Requires cache clear: vendor/bin/typo3 cache:flush

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -203,6 +203,8 @@ services:
       $harmonizationService: '@Netresearch\TemporalCache\Service\HarmonizationService'
       $permissionService: '@Netresearch\TemporalCache\Service\Backend\PermissionService'
       $cacheManager: '@TYPO3\CMS\Core\Cache\CacheManager'
+      $iconFactory: '@TYPO3\CMS\Core\Imaging\IconFactory'
+      $pageRenderer: '@TYPO3\CMS\Core\Page\PageRenderer'
 
   # ============================================================================
   # Reports Module Integration
